--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -62,3 +62,22 @@
 .filterForm{
 	display: flex;
 }
+.applyfilters{
+	border: 1px #e6e6e6 solid;
+    padding: 3px 20px 3px 20px;
+    background: #f7f9f8 !important;
+    border-radius: 2px;
+    position: relative;
+    font-size: 12px;
+	color: #9b9b9b !important;
+	&:hover{
+		background: #dadada !important;
+	}
+	i{
+		font-size: large;
+    	color: #858585;
+	}
+}
+.w-70 {
+    width: 70%!important;
+}
