--- a/src/app/application-onboarding/dynamic-accounts/dynamic-accounts.component.html
+++ b/src/app/application-onboarding/dynamic-accounts/dynamic-accounts.component.html
@@ -23,32 +23,27 @@
                   <thead>
                     <tr>
                       <th class="font-weight-bold">Account Name</th>
-					  <th class="font-weight-bold">Type</th>
-					  <th class="font-weight-bold">Namespace</th>
-					  <th class="font-weight-bold">Read Permissions</th>
-					  <th class="font-weight-bold">Write Permissions</th>
-				      <th class="font-weight-bold">Execute Permissions</th>
-					  <th class="font-weight-bold">Action</th>                          
+                      <th class="font-weight-bold">Type</th>
+                      <th class="font-weight-bold">Namespace</th>
+                      <th class="font-weight-bold">Read Permissions</th>
+                      <th class="font-weight-bold">Write Permissions</th>
+                      <th class="font-weight-bold">Execute Permissions</th>
+                      <th class="font-weight-bold">Action</th>
                       <!-- <th class="font-weight-bold">ACTION</th> -->
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let data of accountListData;let i= index;">
-                        <td>{{data.name}}</td>
-                        <td>{{data.name}}</td>
-                        <td>Kubernetes</td>
-                        <td>{{data.namespaces}}</td>
-                        <td>{{data.permissions.READ.toString()}}</td>
-                        <td>{{data.permissions.WRITE.toString()}}</td>
-                        <td>{{data.permissions.EXECUTE.toString()}}</td>
+                      <tr *ngFor="let accountsData of accountListData">
+                        <td>{{accountsData.name}}</td>
                         <td></td>
-                      <!-- <td>
-                            <a *ngIf = "listData.status === 'ACTIVE' ? true : false"  class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(i)"><i class="fas fa-pencil-alt"></i></a>
-                            <a *ngIf = "listData.status === 'ACTIVE' ? true : false" (click)="appDelete(i)"  class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
-                          </td> -->
-                    </tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                      </tr>
                   </tbody>
-                </table> 
+                </table>
               </div>
               <!-- /.table-content -->
             </div>
