--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -78,6 +78,14 @@
     	color: #858585;
 	}
 }
-.w-70 {
-    width: 70%!important;
+.help-block{
+    color: red;
+}
+input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
+    border: 1px solid red;
+}
+.addFilter{
+	text-align: center;
+    color: #858585;
+    font-size: initial;
 }
