--- a/src/app/application-onboarding/create-account/create-account.component.html
+++ b/src/app/application-onboarding/create-account/create-account.component.html
@@ -1,117 +1,121 @@
 <div class="tab-content h-100 p-3 flex-grow-1">
-        <div class="tab-pane d-flex flex-column bg-white h-100 fade show active">
-          <div class="page_access text-right py-2 px-3">
-            <button class="btn btn-default ml-1" >Cancel</button>
-            <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
-            <button class="btn btn-primary ml-2" >Save & Finish</button>
-          </div>
-          <!-- /.page_access ml-auto -->
-          <div class="setup-content">
+  <div class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+    <div class="page_access text-right py-2 px-3">
+      <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
+      <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
+      <button class="btn btn-primary ml-2" (click)="validate() && submitForm(createAccountForm.value)">Save</button>
+    </div>
+    <!-- /.page_access ml-auto -->
+    <div class="setup-content">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="p-3">
             <div class="row">
-        
-              
-        
-              <div class="col-sm-9">
-                <div class="p-3">
-                  <div class="row">
-                    <!-- ###################### Account Form Section Starts #####################################-->
-                    <div class="col-6">
-                      <form [formGroup]="createAccountForm">
-                        <div class="form-group">
-                          <label>Account Name</label>
-                          <input type="text" class="form-control" formControlName="name">
-                          <span *ngIf="createAccountForm.get('name').invalid && createAccountForm.get('name').touched"
-                            class="help-block">
-                            <span *ngIf="createAccountForm.get('name').errors['required']">Account Name is
-                              required</span>
-                          </span>
-                        </div>
-
-                        <div class="form-group">
-                                <label>Select Account Type</label>
-                                <div class="d-flex  mr-5 align-items-center">
-                                  <select class="form-control">
-                                    <option>Kubernetes</option>
-                                  </select>
-                                </div>
-                                <!-- <span *ngIf="!pipelineArr.get('pipelinetemplate').valid && pipelineArr.get('pipelinetemplate').touched"
-                                class="help-block">Pipeline is required</span> -->
-                              </div>
-                        <!-- /.form-group -->
-                        <div class="form-group">
-                                <label>Name spaces</label>
-                                <input type="text" class="form-control" formControlName="namespaces" >
-                                <span *ngIf="createAccountForm.get('namespaces').invalid && createAccountForm.get('namespaces').touched"
-                                  class="help-block">
-                                  <span *ngIf="createAccountForm.get('namespaces').errors['required']">Namespace is
-                                    required</span>
-                                </span>
-                              </div>
-                        <!-- /.form-group -->
-                        <div class="form-group">
-                          <label>Permissions Read</label>
-                          <input type="text" class="form-control" formControlName="read" >
-                          <span *ngIf="createAccountForm.get('read').invalid && createAccountForm.get('read').touched"
-                            class="help-block">
-                            <span *ngIf="createAccountForm.get('name').errors['required']">read Permissions is
-                              required</span>
-                          </span>
-                        </div>
-                        
-                          <!-- /.form-group -->
-                        <div class="form-group">
-                                <label>Permissions Write</label>
-                                <input type="text" class="form-control" formControlName="write" >
-                                <span *ngIf="createAccountForm.get('write').invalid && createAccountForm.get('write').touched"
-                                  class="help-block">
-                                  <span *ngIf="createAccountForm.get('write').errors['required']">write Permissions is
-                                    required</span>
-                                </span>
-                              </div>
-                               <!-- /.form-group -->
-                            <div class="form-group">
-                                <label>Permissions Execute</label>
-                                <input type="text" class="form-control" formControlName="execute">
-                                <span *ngIf="createAccountForm.get('execute').invalid && createAccountForm.get('execute').touched"
-                                  class="help-block">
-                                  <span *ngIf="createAccountForm.get('execute').errors['required']">Execute Permissions is
-                                    required</span>
-                                </span>
-                              </div>
-                               <!-- /.form-group -->
-
-                               <div class="form-group">
-                                   <label>File::</label>
-                                   <input type="file" class="form-control"/>
-                               </div>
-                      </form>
-                    </div>
-                    <!-- /.col-6 -->
-        
-                    <!-- ###################### Account form Section Ends #####################################-->
-        
-                   
-        
-                    <div class="col-10">
-                      <hr class="ml-0 mt-3 mb-3" />
-                    </div>
-                    <!-- /.col-8 -->
+              <!-- ###################### Account Form Section Starts #####################################-->
+              <div class="col-6">
+                <form [formGroup]="createAccountForm" (ngSubmit)="validate() && submitForm(createAccountForm.value)">
+                  <div class="form-group">
+                    <label>Account Name</label>
+                    <input type="text" class="form-control" formControlName="name">
+                    <span *ngIf="accountform.name.invalid && accountform.name.touched"
+                      class="help-block">
+                      <span *ngIf="accountform.name.invalid && accountform.name.errors.required">Account Name is
+                        required </span>
+                    </span>
                   </div>
-                  <!-- /.row -->
-                </div>
-        
-        
-        
-                <div class="p-3 bottom-strp-cover gray-strip text-right">
-                  <button class="btn btn-default" >Cancel</button>
-                  <button class="btn btn-primary ml-2" >Save</button>
-                </div>
+                  <div class="form-group">
+                          <label>Select Account Type</label>
+                          <div class="align-items-center">
+                            <select class="form-control" formControlName="accountType">
+                              <option>Kubernetes</option>
+                            </select>
+                          </div>
+                           <span *ngIf="accountform.accountType.invalid && accountform.accountType.touched"
+                          class="help-block">
+                          <span *ngIf="accountform.accountType.invalid && accountform.accountType.errors.required">AccountType is required</span>  
+                        </span>
+                        </div>
+                  <!-- /.form-group -->
+                  <div class="form-group">
+                          <label>Name spaces</label>
+                          <input type="text" class="form-control" formControlName="namespaces" >
+                          <span *ngIf="accountform.namespaces.invalid && accountform.namespaces.touched"
+                            class="help-block">
+                            <span *ngIf="accountform.namespaces.invalid && accountform.namespaces.errors.required">Namespace is
+                              required</span>
+                          </span>
+                        </div>
+                  <!-- /.form-group --> 
+                  <div class="form-group">
+                    <label>Permissions Read</label>
+                    <input type="text" class="form-control" formControlName="read" >
+                    <span *ngIf="accountform.read.invalid && accountform.read.touched"
+                      class="help-block">
+                      <span *ngIf="accountform.read.invalid && accountform.read.errors.required">read Permissions is
+                        required</span>
+                    </span>
+                  </div>
+                  
+                    <!-- /.form-group -->
+                  <div class="form-group">
+                          <label>Permissions Write</label>
+                          <input type="text" class="form-control" formControlName="write" >
+                          <span *ngIf="accountform.write.invalid && accountform.write.touched"
+                            class="help-block">
+                            <span *ngIf="accountform.write.invalid && accountform.write.errors.required">write Permissions is
+                              required</span>
+                          </span>
+                        </div>
+                         <!-- /.form-group -->
+                      <div class="form-group">
+                          <label>Permissions Execute</label>
+                          <input type="text" class="form-control" formControlName="execute">
+                          <span *ngIf="accountform.execute.invalid && accountform.execute.touched"
+                            class="help-block">
+                            <span *ngIf="accountform.execute.invalid && accountform.execute.errors.required">Execute Permissions is
+                              required</span>
+                          </span>
+                        </div>
+                         <!-- /.form-group -->
+
+                         <div class="form-group">
+                             <label>File::</label>
+                             <input 
+                             formControlName="file"
+                             id="file" 
+                             type="file" 
+                             class="form-control"
+                             (change)="onFileChange($event)">
+                         <span *ngIf="accountform.file.touched && accountform.file.invalid" class="help-block">
+                             <span *ngIf="accountform.file.invalid && accountform.file.errors.required">File is required.</span>
+                         </span>
+                         </div>
+                </form>
               </div>
-              <!-- /.col-sm-9 -->
+              <!-- /.col-6 -->
+  
+              <!-- ###################### Account form Section Ends #####################################-->
+ 
+              <div class="col-10">
+                <hr class="ml-0 mt-3 mb-3" />
+              </div>
+           
+              <!-- /.col-8 -->
             </div>
             <!-- /.row -->
           </div>
-          <!-- /.setup-content -->
+  
+          <div class="p-3 bottom-strp-cover gray-strip text-right">
+            <button class="btn btn-default" (click)="cancelForm()">Cancel</button>
+            <button class="btn btn-primary ml-2" (click)="validate() && submitForm(createAccountForm.value)" >Save</button>
+          </div>
+  
+         
         </div>
+        <!-- /.col-sm-9 -->
       </div>
-      
+      <!-- /.row -->
+    </div>
+    <!-- /.setup-content -->
+  </div>
+</div>
