Changes related to policy management layout

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -9,7 +9,7 @@
         .appdashboard{
             background-position: 0 -36px;
         }
-        .management{
+        .policymanagement{
             background-position: 0 -216px;
         }
         .audit{
