--- a/src/app/policy-management/policy-management.component.less
+++ b/src/app/policy-management/policy-management.component.less
@@ -62,3 +62,17 @@
 	}
 	
 }
+.policyContent{
+    border: 1px ridge;
+    .w-5{
+        width: 55%;
+    }
+    .policyList{
+        max-height: 700px;
+        overflow-y: scroll;
+    }
+    .policyDetailText{
+        height: 500px;
+        overflow: auto;
+    }
+}
