CRUD operations related to oes account

--- a/src/app/application-onboarding/data-source/data-source.component.html
+++ b/src/app/application-onboarding/data-source/data-source.component.html
@@ -1,1 +1,28 @@
-<p>data-source works!</p>
+<div class="main_content p-0">
+    <div class="page-content">
+      <div class="row no-gutters row-fit-vh">
+        <div class="col-sm-12 d-flex flex-column">
+          <div class="h-100 d-flex flex-column">
+            <div class="tab-content h-100 p-3 flex-grow-1">
+                <div class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+                  <div class="page_access text-right p-3">
+                    <button class="btn btn-default" data-toggle="modal" data-target="#dataSource" data-backdrop="static" data-keyboard="false">New Data Source</button>
+                  </div>
+                  <!-- /.page_access ml-auto -->
+                  <div class="gray-strip"></div>
+                  <!-- /.gray-strip -->
+                  <div class="d-flex w-100 h-100">
+                    <div class="no_content m-auto">
+                      <img src="images/blank-123.png" class="hr-image" alt="blank" />
+                      <p><strong>Create New Data Source</strong></p>
+                      <p>Use application for continuous verification and production monitoring <br><small>(To create application, add at least 1 Cloud service and 1 Data source)</small></p>
+                    </div>
+                    <!-- /.no_content -->
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
