--- a/src/app/application-onboarding/create-account/create-account.component.html
+++ b/src/app/application-onboarding/create-account/create-account.component.html
@@ -37,7 +37,7 @@
                         </div>
                   <!-- /.form-group -->
                   <div class="form-group">
-                          <label>Name spaces</label>
+                          <label>Name space</label>
                           <input type="text" class="form-control" formControlName="namespaces" >
                           <span *ngIf="accountform.namespaces.invalid && accountform.namespaces.touched"
                             class="help-block">
@@ -79,7 +79,7 @@
                          <!-- /.form-group -->
 
                          <div class="form-group">
-                             <label>File::</label>
+                             <label>File</label>
                              <input 
                              formControlName="file"
                              id="file" 
