--- a/src/app/application-onboarding/dynamic-accounts/dynamic-accounts.component.html
+++ b/src/app/application-onboarding/dynamic-accounts/dynamic-accounts.component.html
@@ -59,8 +59,8 @@
                         <td>{{accountsData.permissions.WRITE.toString()}}</td>
                         <td>{{accountsData.permissions.EXECUTE.toString()}}</td>
                         <td>
-                          <a href="#" class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pencil-alt"></i></a>
-                          <a href="#" class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                          <a (click)="editAccount(accountsData)"   class="text-muted ml-2" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pencil-alt"></i></a>
+                          <a (click)="deleteAccount(accountsData)" class="text-muted ml-2" data-toggle="tooltip"  data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
                         </td>
                       </tr>
                   </tbody>
