Changes related to filters in audit

--- a/src/app/policy-management/policy-management.component.less
+++ b/src/app/policy-management/policy-management.component.less
@@ -76,3 +76,9 @@
         overflow: auto;
     }
 }
+.help-block{
+    color: red;
+}
+input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
+    border: 1px solid red;
+}
