--- a/src/app/policy-management/policy-management.component.less
+++ b/src/app/policy-management/policy-management.component.less
@@ -64,11 +64,16 @@
 }
 .policyContent{
     border: 1px ridge;
-    .w-5{
-        width: 55%;
+    .statuselement{
+        text-align: end;
+		padding-top: 28px;
+		padding-right: 66px;
+		input{
+			cursor: pointer;
+		}
     }
     .policyList{
-        max-height: 700px;
+        max-height: 775px;
         overflow-y: scroll;
     }
     .policyDetailText{
