--- a/src/app/application-onboarding/create-account/create-account.component.html
+++ b/src/app/application-onboarding/create-account/create-account.component.html
@@ -82,7 +82,7 @@
                              <label>File</label>
                              <input 
                              formControlName="file"
-                             id="file" 
+                             id="file" name="file"
                              type="file" 
                              class="form-control"
                              (change)="onFileChange($event)">
