--- a/src/app/application-onboarding/dynamic-accounts/dynamic-accounts.component.html
+++ b/src/app/application-onboarding/dynamic-accounts/dynamic-accounts.component.html
@@ -55,12 +55,15 @@
                         <td>{{accountsData.name}}</td>
                         <td>Kubernetes</td>
                         <td>{{accountsData.namespaces}}</td>
-                        <td>{{accountsData.permissions.READ.toString()}}</td>
-                        <td>{{accountsData.permissions.WRITE.toString()}}</td>
-                        <td>{{accountsData.permissions.EXECUTE.toString()}}</td>
+                        <td *ngIf="accountsData.permissions.READ == undefined"> </td>
+                        <td *ngIf="accountsData.permissions.WRITE == undefined"> </td>
+                        <td *ngIf="accountsData.permissions.EXECUTE == undefined"> </td>
+                        <td *ngIf="accountsData.permissions.READ != undefined">{{accountsData.permissions.READ.toString()}}</td>
+                        <td *ngIf="accountsData.permissions.WRITE != undefined">{{accountsData.permissions.WRITE.toString()}}</td>
+                        <td *ngIf="accountsData.permissions.EXECUTE != undefined">{{accountsData.permissions.EXECUTE.toString()}}</td>
                         <td>
                           <a (click)="editAccount(accountsData)"   class="text-muted ml-2" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pencil-alt"></i></a>
-                          <a (click)="deleteAccount(accountsData)" class="text-muted ml-2" data-toggle="tooltip"  data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                          <a (click)="deleteAccount(accountsData,i)" class="text-muted ml-2" data-toggle="tooltip"  data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
                         </td>
                       </tr>
                   </tbody>
